@@ -41,7 +41,8 @@
 	<add key="SyncService.FreeBusy.AdminGroup" value="/o=Your Organization/ou=First Administrative Group"/>
 	<!-- Enable Keep Alive connections to Google Calendar -->
 	<!-- <add key="SyncService.KeepAlive" value="true"/> -->
-	  
+    <!-- Allow diagnostics page to be accessible from location other than localhost -->
+    <!-- <add key="WebService.RequireLocalAccessforDiagnostics" value="false"/> -->
   </appSettings>
 
   <log4net debug="true">
